update "meet friends" section

--- a/introSection.css
+++ b/introSection.css
@@ -76,7 +76,7 @@
   letter-spacing: 3px;
 }
 .main-body-heading-text span{
-  color: #c97f06;
+  color: #cebc9e;
   text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
 }
 
