--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@
 
 .hover-button:hover {
   /* Hover styles */
-  background: #ffbb00 !important;
+  background: #f4e1ab !important;
   color: #000000;
 }
 
