change the navbar style includeing logo and hoffer effect of navbar more intractive also add icon for intractive ui, add a cta button on header section change the main header and paraghraph content

--- a/Assets/css/introSection.css
+++ b/Assets/css/introSection.css
@@ -52,17 +52,17 @@
 }
 
 .main-body-section-div h1 {
-  font-size: 64px;
+  font-size: 75px;
   /* padding-left: 18.8%; */
   color: azure;
   font-weight: bold;
-  letter-spacing: 4px;
+  letter-spacing: 2px;
 }
 .main-body-section-div p {
   font-size: 20px;
   font-weight: 400;
-  letter-spacing: 3px;
   color: white;
+  max-width: 65%;
 }
 .main-body-heading-text span{
   color: #c97f06;
