--- a/Assets/css/output.css
+++ b/Assets/css/output.css
@@ -1244,20 +1244,20 @@ video {
 }
 
 .mission-1 {
-  display: flex;
+  /* display: flex; */
   color: #F8FAFC;
-  margin: 0.5rem;
-  width: 3.5rem;
+  /* margin: 0.5rem; */
+  /* width: 3.5rem; */
   font-size: 1rem;
   font-weight: 600;
 
 }
 
 .mission-2 {
-  display: flex;
+  /* display: flex; */
   color: #F8FAFC;
-  margin: 0.7rem;
-  width: 3.5rem;
+  /* margin: 0.7rem; */
+  /* width: 3.5rem; */
   font-size: 1rem;
   font-weight: 600;
 
