--- a/navbar.css
+++ b/navbar.css
@@ -156,6 +156,9 @@
 @media screen and (max-width: 1190px) {
   #navbar{
     white-space: nowrap;
-    font-size: 12px;
+    
+  }
+  #navbar ul {
+    font-size: 15px;
   }
 }
