changed loaction of help button in SOS report

--- a/reportstary.css
+++ b/reportstary.css
@@ -266,18 +266,17 @@ nav ul li a:hover::after {
 /* help css */
 .help_btn{
 
-  position: absolute;
-  left:75%;
-
-  bottom: 10%;
+  /* position: absolute;
+  left:48%;
+  bottom: 60%; */
   font-size: 1rem;
-  padding: 0.7em 1.7em;
+  padding: 0.75em 1.7em;
   color: #F5F5DC;
   /* color: #FFD700; */
   font-weight: 700;
   --tw-bg-opacity: 0.87;
   background-color: rgb(120 53 15 / var(--tw-bg-opacity));
-  border-radius: 25px;
+  border-radius: 8px;
 }
 .popup {
     text-align: center;
