--- a/reportstary.css
+++ b/reportstary.css
@@ -264,15 +264,14 @@ nav ul li a:hover::after {
 }
 
 /* help css */
-.help_btn{
-
+.help_btn {
   position: absolute;
-  left:75%;
+  left: 75%;
 
   bottom: 10%;
   font-size: 1rem;
   padding: 0.7em 1.7em;
-  color: #F5F5DC;
+  color: #f5f5dc;
   /* color: #FFD700; */
   font-weight: 700;
   --tw-bg-opacity: 0.87;
@@ -280,53 +279,53 @@ nav ul li a:hover::after {
   border-radius: 25px;
 }
 .popup {
-    text-align: center;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border: 1px solid black;
-    border-radius: 50px;
+  text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 50px;
 }
-dialog  .Head{
+dialog .Head {
   font-size: 1.5em;
   margin-bottom: 0.4em;
   color: #21a754;
 }
-dialog > .subHead{
-    font-size: 1.2em;
-    font-style: italic;
-    font-weight: 200;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+dialog > .subHead {
+  font-size: 1.2em;
+  font-style: italic;
+  font-weight: 200;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
 }
-dialog> .Head > .Head_text{
+dialog > .Head > .Head_text {
   display: inline-block;
 }
-dialog> .Head > #close{
+dialog > .Head > #close {
   position: absolute;
   right: 9%;
 }
 dialog > [type="text"] {
-    width: 100%;
-    border: 1px solid;
-    max-width: 400px;
-    padding: 10px;
-    border-radius: 125px;
-    margin-bottom: 15px;
-    margin-top: 34px;
-  }
-dialog > #GoButton{
+  width: 100%;
+  border: 1px solid;
+  max-width: 400px;
+  padding: 10px;
+  border-radius: 125px;
+  margin-bottom: 15px;
+  margin-top: 34px;
+}
+dialog > #GoButton {
   padding: 0.4em 0.7em;
   border: 1px solid;
   border-radius: 100px;
 }
-dialog > #GoButton:hover{
+dialog > #GoButton:hover {
   background-color: rgb(250, 250, 215);
   border: 2px solid;
 }
 /*Fixed footer form issue*/
-footer form{
+footer form {
   background: var(--color-white);
 }
