--- a/output.css
+++ b/output.css
@@ -7,6 +7,15 @@
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
 
+.contactusform-color-lightmode {
+  color: rgb(18, 17, 17) ;  /* contact us form text color in light-mode */
+}
+
+.contactusform-color-darkmode{
+  /*if contact us form text color needs to be changed, can be chnaged here */
+}
+
+
 *,
 ::before,
 ::after {
