--- a/navbar.css
+++ b/navbar.css
@@ -168,16 +168,33 @@
   padding: 0 4rem;
   
 }
-a{
+a {
   text-decoration: none;
   color: white;
+  position: relative;
 }
-a:hover{
-  color:hwb(37 38% 0%);
-  font-size: 1.25rem;
+
+a::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background: hwb(37 38% 0%);
+  bottom: 0;
+  left: 0;
+  transition: width 0.3s ease-in-out;
+}
+
+a:hover::after {
+  width: 100%;
+}
+
+a:hover {
+  color: hwb(37 38% 0%);
   cursor: pointer;
-  text-decoration: underline;
+  transform: scale(1.3);
 }
+
 .nav-items div{
   font-size: 20px;
   font-weight: 500;
