I make changes in Background Wallpaper , adding phone no. dialog box , and a red color footer in copyright text

--- a/introSection.css
+++ b/introSection.css
@@ -70,7 +70,7 @@
 }
 
 .pet-card-flex {
-  background-image: url("./Assets/Images/pattern\ doodle.png");
+  background-image: url("./Assets/Images/file.png");
   display: flex;
   flex-direction: column;
   padding-top: 20px;
