--- a/reportstary.css
+++ b/reportstary.css
@@ -294,3 +294,36 @@ dialog > #GoButton:hover{
 footer form{
   background: var(--color-white);
 }
+
+
+
+
+/* Add brown color to the slider */
+input[type='range'] {
+  appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background-color: #795548; /* Brown color */
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+/* Customize the slider thumb */
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: #ffffff; /* White color for the thumb */
+  cursor: pointer;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Box shadow for the thumb */
+}
+
+input[type='range']:hover {
+  opacity: 1;
+}
+
