--- a/reportstary.css
+++ b/reportstary.css
@@ -60,6 +60,16 @@ body::before {
   height: 2.375rem;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
+  border-radius: 0.25rem;
+  border: 1px solid #ced4da;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-control:focus {
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 8px rgba(32, 251, 46, 0.25);
 }
 
 .input-radio,
@@ -74,6 +84,9 @@ body::before {
   padding: 0.625rem;
   resize: vertical;
   border-radius: 0.25rem;
+  border: 1px solid #ced4da;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 #title {
@@ -166,7 +179,19 @@ button {
 form {
   background: var(--color-cyan-alpha);
   padding: 2.5rem 0.625rem;
-  border-radius: 0.25rem;
+  border-radius: 1rem;
+  box-shadow: 
+  inset 0 0 10px rgba(255, 0, 0, 0.3),  /* Red shadow */
+  inset 0 0 20px rgba(0, 255, 0, 0.3),  /* Green shadow */
+  inset 0 0 30px rgba(0, 0, 255, 0.3);  /* Blue shadow */ 
+  position: relative;
+}
+
+footer form {
+  background: var(--color-white);
+  padding: 2.5rem 0.625rem;
+  border-radius: 1rem;
+  box-shadow: none; 
 }
 
 @media (min-width: 480px) {
@@ -293,4 +318,7 @@ dialog > #GoButton:hover{
 /*Fixed footer form issue*/
 footer form{
   background: var(--color-white);
+}
+.space-y-2 {
+  color: white;
 }
