--- a/introSection.css
+++ b/introSection.css
@@ -18,6 +18,7 @@
 				color: aliceblue;
 				padding-top: 30px;
 				padding-bottom: 30px;
+        border-radius: 20px;
 }
 
 /* CORRECT THE HERO IMAGE: I also changed the height to a 850px to give clearer view of the cute puppies */
