--- a/introSection.css
+++ b/introSection.css
@@ -100,8 +100,8 @@
 
 .main-img {
   position: relative;
-  background-color: rgb(255, 231, 202);
-  border-radius: 15px;
+  background-color:brown;
+  border-radius: 5%;
   overflow: hidden;
   transition: all 300ms;
 }
