commiting code by rafeya

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@
   padding: 12px 24px;
   font-size: 1.25rem;
   border-radius: 0.5rem;
-  border: 0.1rem solid rgb(68,38,0);
+  border: 0.1rem solid rgb(243, 240, 237);
   color: #fff;
   cursor: pointer;
   background: #895a21;
